update game code

--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
     </style>
 </head>
 <body>
-<div id="blue" class="box"></div>
-<div id="red" class="box"></div>
 
-<div id="board" class="gameboard">
-    <div id="col1row1" class="gamebox" class="col1" class="row1">col1row1</div>
-    <div id="col2row1" class="gamebox" class="col2" class="row1">col2row1</div>
-    <div id="col1row2" class="gamebox" class="col1" class="row2">col1row2</div>
-    <div id="col2row2" class="gamebox" class="col2" class="row2">col2row2</div>
+<div id="demo" class="demo">
+    <div id="blue" class="box"></div>
+    <div id="red" class="box"></div>
+</div>
+<h4>
+    Challenge: Turn all the boxes red
+</h4>
+<div id="gameboard" class="gameboard">
+    <div id="col1row1" class="gamebox" class="col1" class="row1"></div>
+    <div id="col2row1" class="gamebox" class="col2" class="row1"></div>
+    <div id="col1row2" class="gamebox" class="col1" class="row2"></div>
+    <div id="col2row2" class="gamebox" class="col2" class="row2"></div>
 </div>
 
-<script src="util.js"></script>
-<script src="update.js"></script>
 <script src="game.js"></script>
-<!-- <script src="update_old.js"></script> -->
 </body>
 </html>
